--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupwork</groupId>
-    <artifactId>groupwork</artifactId>
+    <artifactId>my_vote</artifactId>
     <version>1</version>
     <packaging>war</packaging>
 
@@ -42,6 +42,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.5.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
