Updated: web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,8 @@
 
     <display-name>vote-group-app</display-name>
 
+    <listener>
+        <listener-class>groupwork.web.listener.PropertiesLoaderListener</listener-class>
+    </listener>
+
 </web-app>
