--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>0.9.5.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
